; ModuleID = '/home/carl/AnghaBench/qmk_firmware/tmk_core/protocol/bluefruit/extr_bluefruit.c_send_consumer.c'
source_filename = "/home/carl/AnghaBench/qmk_firmware/tmk_core/protocol/bluefruit/extr_bluefruit.c_send_consumer.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@send_consumer.last_data = internal global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i64)* @send_consumer to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @send_consumer(i64 %0) #0 {
  %2 = alloca i64, align 8
  %3 = alloca i64, align 8
  store i64 %0, i64* %2, align 8
  %4 = load i64, i64* %2, align 8
  %5 = load i64, i64* @send_consumer.last_data, align 8
  %6 = icmp eq i64 %4, %5
  br i1 %6, label %7, label %8

7:                                                ; preds = %1
  br label %28

8:                                                ; preds = %1
  %9 = load i64, i64* %2, align 8
  store i64 %9, i64* @send_consumer.last_data, align 8
  %10 = load i64, i64* %2, align 8
  %11 = call i64 @CONSUMER2BLUEFRUIT(i64 %10)
  store i64 %11, i64* %3, align 8
  %12 = call i32 @bluefruit_serial_send(i32 253)
  %13 = call i32 @bluefruit_serial_send(i32 0)
  %14 = call i32 @bluefruit_serial_send(i32 2)
  %15 = load i64, i64* %3, align 8
  %16 = ashr i64 %15, 8
  %17 = and i64 %16, 255
  %18 = trunc i64 %17 to i32
  %19 = call i32 @bluefruit_serial_send(i32 %18)
  %20 = load i64, i64* %3, align 8
  %21 = and i64 %20, 255
  %22 = trunc i64 %21 to i32
  %23 = call i32 @bluefruit_serial_send(i32 %22)
  %24 = call i32 @bluefruit_serial_send(i32 0)
  %25 = call i32 @bluefruit_serial_send(i32 0)
  %26 = call i32 @bluefruit_serial_send(i32 0)
  %27 = call i32 @bluefruit_serial_send(i32 0)
  br label %28

28:                                               ; preds = %8, %7
  ret void
}

declare dso_local i64 @CONSUMER2BLUEFRUIT(i64) #1

declare dso_local i32 @bluefruit_serial_send(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
